# VTK-reader

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: polyData.h  vtkReader.h
src/: 4elements.vtk  main.cpp  polyData.cpp  quad.vtk  vtkReader.cpp
